<resources>
    <string name="app_name">Arithmetic Expression Game</string>
    <string name="message"> About : \n
        Name: Munwar\n
        Id: K19SW33\n
         I confirm that I understand what plagiarism is and have read and
         understood the section on Assessment Offences in the Essential
         Information for Students. The work that I have submitted is
         entirely my own. Any work from other authors is duly referenced
         and acknowledged.

    </string>
    <string name="less_than"><![CDATA[Less than <]]></string>
    <string name="equal">Equal =</string>
    <string name="greater_than"><![CDATA[Greater than >]]></string>
    <string name="expression_are">Expression are</string>
    <string name="answer_is">Answer is</string>
    <string name="expression_1_is">Expression 1 is :</string>
    <string name="equal_to">equal to</string>
    <string name="setting">Setting</string>
    <string name="pause">Pause</string>
</resources>