<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Lal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#B7FFEB3B"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="TextView"
        android:textColor="#0A76CC"
        android:textSize="20sp" />

    <Button
        android:id="@+id/pause"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#2196F3"
        android:text="@string/pause"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/timer"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#2196F3"
        android:text="Close Timer"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="#FFEB3B"
            android:textColor="#DCFF4141"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/exp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="#FFEB3B"
            android:textColor="#DCFF4141"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/ResultBoolean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="#FFEB3B"
        android:fontFamily="@font/patua_one"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/answer_is"
        android:textColor="#388E3C"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/resultIs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="#FFEB3B"
        android:fontFamily="@font/patua_one"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/answer_is"
        android:textColor="#4909A3"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="#FFEB3B"
        android:fontFamily="@font/patua_one"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/expression_1_is"
        android:textColor="#4909A3"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/Expression_Buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/greater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#E1FFEB3B"
            android:backgroundTint="#CFC03C"
            android:padding="5dp"
            android:text="@string/greater_than"
            android:textColor="#0F2393"
            android:textStyle="bold" />

        <Button
            android:id="@+id/equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#E1FFEB3B"
            android:padding="5dp"
            android:text="@string/equal_to"
            android:textColor="#0F2393"
            android:textStyle="bold" />

        <Button
            android:id="@+id/less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#E1FFEB3B"
            android:padding="5dp"
            android:text="@string/less_than"
            android:textColor="#0F2393"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LastButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ShowResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="Show Result"
            android:textStyle="bold" />

        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Close"
            />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="Next"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>
